remove no longer necessary --add-modules